// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dummy.js 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

=====================================output=====================================

================================================================================
`;

exports[`test.js 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./dummy');
var xxx = 0;
xxx

=====================================output=====================================
require("./dummy");
var xxx = 0;
xxx;

================================================================================
`;
